<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/warna_base_terang"
    android:id="@+id/fragment_container"
    >

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="290dp"
        android:layout_height="216dp"
        android:background="@drawable/kotak_putih"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/box"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/kotak_biru_muda"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter"
        android:text="@string/status_pengemudi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/text_status_mengemudi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/tidak_mengemudi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/box"
        app:layout_constraintEnd_toEndOf="@+id/box"
        app:layout_constraintStart_toStartOf="@+id/box"
        app:layout_constraintTop_toTopOf="@+id/box" />

    <Button
        android:id="@+id/btn_mulai"
        android:layout_width="126dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/warna_base_btn"
        android:fontFamily="@font/inter"
        android:text="@string/mulai"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="80dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/box"
        app:strokeColor="#40514E"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_selesai"
        android:layout_width="126dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/warna_base_btn"
        android:fontFamily="@font/inter"
        android:text="@string/selesai"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="80dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/box"
        app:strokeColor="#40514E"
        app:strokeWidth="1dp"
        android:enabled="false"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>